--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "formidable": "^3.5.4",
+    "mysql2": "^3.16.0",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.69.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
